force-app/main/default/objects/Opportunity_Product__c/Opportunity_Product__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product</label>
    <nameField>
        <label>Opportunity Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>