force-app/main/default/objects/Opportunity_Product__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity Products</relationshipLabel>
    <relationshipName>Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>